--- a/full_project.yml
+++ b/full_project.yml
@@ -1,120 +1,14 @@
-name: clustering
 channels:
+  - jmcmurray
+  - conda-forge
   - defaults
 dependencies:
-  - affine=2.3.0=py_0
-  - attrs=19.3.0=py_0
-  - blas=1.0=mkl
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py37_1
-  - click=7.1.1=py_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.5.0=py37_0
-  - curl=7.67.0=h2a8f88b_0
-  - expat=2.2.5=he025d50_0
-  - fiona=1.8.4=py37h22081e2_0
-  - freexl=1.0.5=hfa6e2cd_0
-  - gdal=2.3.3=py37hdf43c64_0
-  - geopandas=0.6.1=py_0
-  - geos=3.7.1=h33f27b4_0
-  - hdf4=4.2.13=h712560f_2
-  - hdf5=1.10.4=h7ebc959_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha66f8fd_1
-  - intel-openmp=2020.0=166
-  - jpeg=9b=hb83a4c4_2
-  - kealib=1.4.7=h07cbb95_6
-  - krb5=1.16.4=hc04afaa_0
-  - libboost=1.67.0=hd9e427e_4
-  - libcurl=7.67.0=h2a8f88b_0
-  - libgdal=2.3.3=h10f50ba_0
-  - libiconv=1.15=h1df5818_7
-  - libkml=1.3.0=he5f2a48_4
-  - libnetcdf=4.6.1=h411e497_2
-  - libpng=1.6.37=h2a8f88b_0
-  - libpq=11.2=h3235a2c_0
-  - libspatialindex=1.9.3=h33f27b4_0
-  - libspatialite=4.3.0a=hc36aec2_19
-  - libssh2=1.9.0=h7a1dbc1_1
-  - libtiff=4.1.0=h56a325e_0
-  - libxml2=2.9.9=h464c3ec_0
-  - mkl=2020.0=166
-  - mkl-service=2.3.0=py37hb782905_0
-  - mkl_fft=1.0.15=py37h14836fe_0
-  - mkl_random=1.1.0=py37h675688f_0
-  - munch=2.5.0=py_0
-  - numpy=1.18.1=py37h93ca92e_0
-  - numpy-base=1.18.1=py37hc3f5095_1
-  - openssl=1.1.1f=he774522_0
-  - pandas=1.0.3=py37h47e9c7a_0
-  - pcre=8.43=ha925a31_0
-  - pip=20.0.2=py37_1
-  - proj4=5.2.0=ha925a31_1
-  - pyparsing=2.4.6=py_0
-  - pyproj=1.9.6=py37h6782396_0
-  - python=3.7.7=h60c2a47_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - rasterio=1.0.21=py37h6bd7d87_0
-  - rasterstats=0.14.0=py_0
-  - rtree=0.9.3=py37h21ff451_0
-  - setuptools=46.1.3=py37_0
-  - shapely=1.6.4=py37h222a598_0
-  - simplejson=3.17.0=py37he774522_0
-  - six=1.14.0=py37_0
-  - snuggs=1.4.7=py_0
-  - sqlite=3.31.1=he774522_0
-  - tk=8.6.8=hfa6e2cd_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_1
-  - wheel=0.34.2=py37_0
-  - wincertstore=0.2=py37_0
-  - xerces-c=3.2.2=ha925a31_0
-  - xz=5.2.4=h2fa13f4_4
-  - zlib=1.2.11=h62dcd97_3
-  - zstd=1.3.7=h508b16e_0
-  - pip:
-    - backcall==0.1.0
-    - bleach==3.1.4
-    - colorama==0.4.3
-    - decorator==4.4.2
-    - defusedxml==0.6.0
-    - entrypoints==0.3
-    - importlib-metadata==1.6.0
-    - ipykernel==5.2.0
-    - ipynb==0.5.1
-    - ipython==7.13.0
-    - ipython-genutils==0.2.0
-    - jedi==0.16.0
-    - jinja2==2.11.1
-    - json5==0.9.4
-    - jsonschema==3.2.0
-    - jupyter-client==6.1.2
-    - jupyter-core==4.6.3
-    - jupyterlab==2.0.1
-    - jupyterlab-server==1.0.7
-    - markupsafe==1.1.1
-    - mistune==0.8.4
-    - nbconvert==5.6.1
-    - nbformat==5.0.5
-    - notebook==6.0.3
-    - pandocfilters==1.4.2
-    - parso==0.6.2
-    - pickleshare==0.7.5
-    - prometheus-client==0.7.1
-    - prompt-toolkit==3.0.5
-    - pygments==2.6.1
-    - pyrsistent==0.16.0
-    - pywin32==227
-    - pywinpty==0.5.7
-    - pyzmq==19.0.0
-    - send2trash==1.5.0
-    - terminado==0.8.3
-    - testpath==0.4.4
-    - tornado==6.0.4
-    - traitlets==4.3.3
-    - wcwidth==0.1.9
-    - webencodings==0.5.1
-    - zipp==3.1.0
-
+  - geopandas
+  - rasterio
+  - rasterstats
+  - tk
+  - json 
+  - jupyterlab
+  - ipywidgets 
+  - gdal
+  - nbformat
